framec/tests/snapshots/swift_snapshots__selfcall.snap
---
source: framec/tests/swift_snapshots.rs
expression: "compile_fixture(\"06_selfcall\", \"swift\")"
---
import Foundation

class SelfCallFrameEvent {
    var _message: String
    var _parameters: [Any]

    init(message: String, parameters: [Any] = []) {
        self._message = message
        self._parameters = parameters
    }
}

class SelfCallFrameContext {
    var _event: SelfCallFrameEvent
    var _return: Any?
    var _data: [String: Any] = [:]
    var _transitioned: Bool = false

    init(event: SelfCallFrameEvent, defaultReturn: Any? = nil) {
        self._event = event
        self._return = defaultReturn
    }
}

class SelfCallCompartment {
    var state: String
    var state_args: [Any] = []
    var state_vars: [String: Any] = [:]
    var enter_args: [Any] = []
    var exit_args: [Any] = []
    var forward_event: SelfCallFrameEvent?
    var parent_compartment: SelfCallCompartment?

    init(state: String) {
        self.state = state
    }

    func copy() -> SelfCallCompartment {
        let c = SelfCallCompartment(state: self.state)
        c.state_args = self.state_args
        c.state_vars = self.state_vars
        c.enter_args = self.enter_args
        c.exit_args = self.exit_args
        c.forward_event = self.forward_event
        c.parent_compartment = self.parent_compartment
        return c
    }
}

public class SelfCall {
    private var _state_stack: [SelfCallCompartment] = []
    private var __compartment: SelfCallCompartment
    private var __next_compartment: SelfCallCompartment? = nil
    private var _context_stack: [SelfCallFrameContext] = []
    public var count: Int = 0

    init() {
        _state_stack = []
        _context_stack = []
        self.__compartment = SelfCall.__prepareEnter("Active", [], [])
        self.__next_compartment = nil
    }

    func __frame_init() {
        let __e = SelfCallFrameEvent(message: "$>", parameters: __compartment.enter_args)
        let __ctx = SelfCallFrameContext(event: __e)
        _context_stack.append(__ctx)
        __kernel(__e)
        _context_stack.removeLast()
    }

    static func __create() -> SelfCall {
        let c = SelfCall()
        c.__frame_init()
        return c
    }

    private static func hsm_chain() -> [String: [String]] {
        return [
            "Active": ["Active"],
        ]
    }
    private static func __prepareEnter(_ leaf: String, _ state_args: [Any], _ enter_args: [Any]) -> SelfCallCompartment {
        var comp: SelfCallCompartment? = nil
        for name in SelfCall.hsm_chain()[leaf]! {
            let new_comp = SelfCallCompartment(state: name)
            new_comp.state_args = state_args
            new_comp.enter_args = enter_args
            new_comp.parent_compartment = comp
            comp = new_comp
        }
        return comp!
    }
    private func __prepareExit(_ exit_args: [Any]) {
        var comp: SelfCallCompartment? = __compartment
        while comp != nil {
            comp!.exit_args = exit_args
            comp = comp!.parent_compartment
        }
    }

    private func __kernel(_ __e: SelfCallFrameEvent) {
        // Route event to current state.
        __router(__e)
        // Drain any transitions queued by the handler.
        while __next_compartment != nil {
            let next_compartment: SelfCallCompartment = __next_compartment!
            __next_compartment = nil
            // Exit the current (leaf) state.
            let exit_event = SelfCallFrameEvent(message: "<$", parameters: __compartment.exit_args)
            __router(exit_event)
            // Switch to the new compartment.
            __compartment = next_compartment
            // Three-branch forward-event handling.
            let forward_event: SelfCallFrameEvent? = next_compartment.forward_event
            next_compartment.forward_event = nil
            if forward_event == nil {
                // No forwarded event — synthesize a fresh $>.
                let enter_event = SelfCallFrameEvent(message: "$>", parameters: __compartment.enter_args)
                __router(enter_event)
            } else if forward_event!._message == "$>" {
                // Forwarded event IS $> — dispatch directly so the
                // destination's $> handler receives the caller's payload.
                __router(forward_event!)
            } else {
                // Forwarded event is not $> — initialize the destination
                // with a fresh $>, then dispatch the forward.
                let enter_event = SelfCallFrameEvent(message: "$>", parameters: __compartment.enter_args)
                __router(enter_event)
                __router(forward_event!)
            }
            for ctx in _context_stack {
                ctx._transitioned = true
            }
        }
    }

    private func __router(_ __e: SelfCallFrameEvent) {
        if __compartment.state == "Active" {
            _state_Active(__e, __compartment)
        }
    }

    private func __transition(_ next: SelfCallCompartment) {
        __next_compartment = next
    }

    public func kick() {
        let __e = SelfCallFrameEvent(message: "kick", parameters: [])
        let __ctx = SelfCallFrameContext(event: __e)
        _context_stack.append(__ctx)
        defer { _context_stack.removeLast() }
        __kernel(_context_stack[_context_stack.count - 1]._event)
    }

    public func report() -> Int {
        let __e = SelfCallFrameEvent(message: "report", parameters: [])
        let __ctx = SelfCallFrameContext(event: __e, defaultReturn: 0)
        _context_stack.append(__ctx)
        defer { _context_stack.removeLast() }
        __kernel(_context_stack[_context_stack.count - 1]._event)
        let __result = _context_stack[_context_stack.count - 1]._return as! Int
        return __result
    }

    private func _state_Active(_ __e: SelfCallFrameEvent, _ compartment: SelfCallCompartment) {
        if __e._message == "kick" {
            self._s_Active_hdl_user_kick(__e, compartment)
            return
        }
        if __e._message == "report" {
            self._s_Active_hdl_user_report(__e, compartment)
            return
        }
    }

    private func _s_Active_hdl_user_kick(_ __e: SelfCallFrameEvent, _ compartment: SelfCallCompartment) {
        self.count = self.count + 1
        self.report()
        if !_context_stack.isEmpty && _context_stack[_context_stack.count - 1]._transitioned { return }
    }

    private func _s_Active_hdl_user_report(_ __e: SelfCallFrameEvent, _ compartment: SelfCallCompartment) {
        _context_stack[_context_stack.count - 1]._return = self.count
    }
}
